--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Product preview card component</title>
@@ -19,7 +19,7 @@
   <body>
     <section class="main">
       <div class="img">
-        <img src="images/image-product-desktop.jpg" alt="perfume bottle" />
+        <img src="image-product-desktop.jpg" alt="perfume bottle" />
       </div>
       <div class="txt">
         <span id="perfume">P E R F U M E</span>
